worked on logic of joining game